# rust_wasm_cedar

./: Cargo.toml  README.md  policy.cedar
src/: lib.rs  main.rs
