[package]
name = "rust_wasm_cedar"
version = "0.1.0"
edition = "2018"

[dependencies]
cedar-policy = "3.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.58", features = ["Window", "Response", "Request", "RequestInit", "Headers", "console"] }
js-sys = "0.3.58"
console_error_panic_hook = "0.1.7"
wasm-bindgen-futures = "0.4.34"
